force-app/main/default/objects/User/fields/BypassApex__c.field-meta.xml
<CustomField>
    <fullName>BypassApex__c</fullName>
    <label>BypassApex</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TriggerHandlerName</fullName>
            </value>
            <value>
                <fullName>UtilsMethodeForAccount</fullName>
            </value>
            <value>
                <fullName>AP02_Contract</fullName>
            </value>
            <value>
                <fullName>AP01_Hotel</fullName>
            </value>
            <value>
                <fullName>AP01_SObject</fullName>
            </value>
            <value>
                <fullName>AP04_Account</fullName>
            </value>
            <value>
                <fullName>Account_Handler</fullName>
            </value>
            <value>
                <fullName>AP05_Account</fullName>
            </value>
            <value>
                <fullName>AP01_Account</fullName>
            </value>
            <value>
                <fullName>AP07_Account</fullName>
            </value>
            <value>
                <fullName>AP06_Account</fullName>
            </value>
            <value>
                <fullName>Ap01_Contact</fullName>
            </value>
            <value>
                <fullName>AP01_Case</fullName>
            </value>
            <value>
                <fullName>AP02_Case</fullName>
            </value>
            <value>
                <fullName>AP03_Case</fullName>
            </value>
            <value>
                <fullName>AP01_BookingRoomLine</fullName>
            </value>
            <value>
                <fullName>AP01_Voucher</fullName>
            </value>
            <value>
                <fullName>AP04_Voucher</fullName>
            </value>
            <value>
                <fullName>AP03_voucher</fullName>
            </value>
            <value>
                <fullName>AP08_Opportunity</fullName>
            </value>
            <value>
                <fullName>OpportunityHandler</fullName>
            </value>
            <value>
                <fullName>AP05_Opportunity</fullName>
            </value>
            <value>
                <fullName>AP03_Opportunity</fullName>
            </value>
            <value>
                <fullName>AP04_Opportunity</fullName>
            </value>
            <value>
                <fullName>AP17_Opportunity</fullName>
            </value>
            <value>
                <fullName>AP014_Opportunity</fullName>
            </value>
            <value>
                <fullName>AP02_Opportunity</fullName>
            </value>
            <value>
                <fullName>AP06_Opportunity</fullName>
            </value>
            <value>
                <fullName>BookingRoomLine_Handler</fullName>
            </value>
            <value>
                <fullName>AP05_Voucher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>