force-app/main/default/objects/User/fields/BypassProcessBuilder__c.field-meta.xml
<CustomField>
    <fullName>BypassProcessBuilder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass ProcessBuilder</label>
    <type>Checkbox</type>
</CustomField>