force-app/main/default/objects/User/fields/BypassValidationRule__c.field-meta.xml
<CustomField>
    <fullName>BypassValidationRule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass ValidationRule</label>
    <type>Checkbox</type>
</CustomField>