force-app/main/default/objects/User/fields/BypassWorkflow__c.field-meta.xml
<CustomField>
    <fullName>BypassWorkflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Workflow</label>
    <type>Checkbox</type>
</CustomField>